; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit__parse_ext.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit__parse_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_commit__parse_ext(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @git_odb_object_data(i32* %8)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @git_odb_object_size(i32* %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @commit_parse(i32* %7, i32 %9, i32 %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @commit_parse(i32*, i32, i32, i32) #1

declare dso_local i32 @git_odb_object_data(i32*) #1

declare dso_local i32 @git_odb_object_size(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
